
  * hergebruik oude tabel options_themes, nu onder de naam question_options_themes

  * voeg methoden toe aan model User:

    * alternative_accounts
    * nemo
    * ensure_password
    * guest?

  * voeg before_validation toe aan model User:

    * verhinder dat iemand email aanpast
    * wijzig Org toe obv oude organisation_domains, nu onder de naam ugent_org_domains

- app/controllers/ugent/selectable_user_controller.rb

  ugent specifieke controller waarmee je kan kiezen tussen accounts
  wanneer je een orcid overeenkomt met meer dan één account

- app/controllers/ugent/switch_user_controller.rb

  ugent specifieke controller waarmee naar een van je andere accounts
  kan gaan, indien jouw orcid ook overeenkomt met een andere account

- app/models/ugent/log.rb

  hergebruik oude tabel "logs", nu onder de naam "ugent_logs"

- app/models/ugent/org_domain.rb

  hergebruik oude tabel "organisation_domains",
  nu onder de naam "ugent_org_domains"

- config/custom.yml

  voegt ugent specifieke configuratie toe

  gebruik:

    * associëer elke Org met één of meerdere dpo's

- TODO: Identifier met als identifier_scheme voor shibboleth en identifiable_type "User" is leeg:

  moet gevuld worden tijdens upgrade

- app/views/branded/shared/_sign_in_form.html.erb
  app/views/branded/shared/_access_controls.html.erb

  * replace login/registration form with list of org identifiers
  * if an organisation has multiple identifiers, then append the host name of that id

- app/views/branded/home/index.html.erb

  changed width of signin panel to give it more space

- config/initializers/_dmproadmap_ugent.rb

  overrides settings config/initializers/_dmproadmap.rb

- config/initializers/devise_ugent.rb

  overrides settings from config/initializers/devise.rb

- config/initializers/contact_us.rb

  not included in .gitigore,
  and expected by roadmap to set (contact_us.rb.example not used)

- config/routes/*.yml

  voegt extra routes toe
